# munin

./: .gitignore  CLAUDE.md  LICENSE  README.md
.claude/rules/: apple-contacts.md  authoring.md  bases.md  daily.md  destinations.md  diet.md  dining.md  evidence.md  experiences.md  geo.md  homes.md  ideas.md  neighborhoods.md  people.md  python.md  research.md  restaurants.md  scripts.md  shopping.md  supplements.md  tier-pass.md  todos.md  trackers.md  travel.md  writing.md
.claude/skills/daily/: SKILL.md
.claude/skills/deep-research/: SKILL.md
.claude/skills/deep-research/templates/: scored-research.js
.claude/skills/google-docs/: SKILL.md
.claude/skills/google-sheets/: SKILL.md
.claude/skills/new-research/: SKILL.md
.claude/skills/person/: SKILL.md
.claude/skills/print-one-pager/: SKILL.md  example-sofras.html  reference.md  template.html
.claude/skills/print-one-pager/scripts/: check_print.sh  embed_fonts.sh  embed_image.sh
.claude/skills/restaurant/: SKILL.md
.claude/skills/run-pass/: SKILL.md
.claude/skills/share-research/: SKILL.md
.claude/skills/stack/: SKILL.md
.claude/skills/tabelog-hyakumeiten/: SKILL.md
.claude/skills/tabelog-photos/: SKILL.md
.claude/skills/triage/: SKILL.md
.claude/skills/trip/: SKILL.md
.claude/skills/weather/: SKILL.md
docs/: research-harness-rigor.md
docs/backlog/: README.md  unscheduled.md
scripts/: .env.example  pyproject.toml  rules-scope-test.md  vault-tool
scripts/tests/: test_comps.py  test_db.py  test_docs.py  test_evidence.py  test_evidence_citations.py  test_evidence_rank.py  test_fm.py  test_geocode.py  test_google.py  test_homes.py  test_research_calibration.py  test_research_certainty.py  test_research_cli.py  test_research_confidence.py  test_research_coverage.py  test_research_magnitude.py  test_research_render.py  test_research_scaffold.py  test_research_sheets.py  test_research_store.py  test_research_verify.py  test_retry.py  test_sheets.py  test_stack.py  test_strava.py  test_utils.py  test_weather.py
scripts/typings/duckdb/: __init__.pyi
scripts/typings/frontmatter/: __init__.pyi
scripts/vault_scripts/: _cli.py  _comps.py  _docs.py  _google.py  _retry.py  _sheets.py  _types.py  _utils.py  cover_image.py  datasets.json  db.py  docs.py  evidence.py  fm.py  geocode.py  homes.py  sheets.py  stack.py  strava.py  style_audit.py  sync_contacts.py  walk.py  weather.py
scripts/vault_scripts/research/: __init__.py  __main__.py  _output.py  calibration.py  certainty.py  cli.py  confidence.py  coverage.py  magnitude.py  mirror.py  render.py  scaffold.py  score.py  sheets.py  store.py  verify.py
scripts/vault_scripts/research/templates/: CLAUDE.md  FINDER-PROMPT.md  HANDOFF.md  SYNTHESIS.md  research.toml
scripts/vault_scripts/research/templates/dot-claude/rules/: evidence.md  orchestration.md
scripts/vault_scripts/research/templates/modes/estimate/: CLAUDE.md  FINDER-PROMPT.md  HANDOFF.md  SYNTHESIS.md  research.toml
scripts/vault_scripts/research/templates/modes/estimate/dot-claude/rules/: evidence.md
scripts/vault_scripts/research/templates/modes/find/: CLAUDE.md  FINDER-PROMPT.md  HANDOFF.md  SYNTHESIS.md  research.toml
scripts/vault_scripts/research/templates/modes/find/dot-claude/rules/: evidence.md
scripts/vault_scripts/research/templates/modes/rank/: CLAUDE.md  FINDER-PROMPT.md  HANDOFF.md  SYNTHESIS.md  research.toml
scripts/vault_scripts/research/templates/modes/rank/dot-claude/rules/: evidence.md
scripts/vault_scripts/research/templates/modes/verify/: CLAUDE.md  FINDER-PROMPT.md  HANDOFF.md  SYNTHESIS.md  research.toml
scripts/vault_scripts/research/templates/modes/verify/dot-claude/rules/: evidence.md
scripts/vault_scripts/research/templates/narrative/: README.md
